--- a/css/partials/_layout.scss
+++ b/css/partials/_layout.scss
@@ -1,14 +1,126 @@
 html{
   font-size: 62.5%;
 }
-
-
-#sec1{
-  width: 100%
+body{
+  color: #fff;
 }
-#sec2{
-  width: 100%
+#sec1-main-cont{
+  width: 100%;
+  background-color: #000;
+  position: relative;
+  background-image: url('../images/whitetiger1.png');
+  background-size: cover;
+  background-position: top right;
+  nav{
+    width: 100%;
+    height: $nav;
+    background-color: rgba(22, 22, 22, 1);
+    position: fixed;
+    #nav-logo{
+      @include zero;
+      height: $nav;
+      position: absolute;
+      left: 9rem;
+      @include dirrow;
+      .fa-envira{
+        font-size: 2rem;
+        color: #f9d423;
+        transition: 0.3s;
+        margin-right: 0.5rem;
+        transition: 0.7s;
+        -moz-transition: 0.7s;
+      }
+      p{
+        padding: 0;
+        margin: auto;
+        font-family: $nuni;
+        font-size: 2.2rem;
+        text-transform: uppercase;
+        letter-spacing: 0.8rem;
+      }
+      &:hover{
+        cursor: pointer;
+        .fa-envira{
+          color: #1cd8d2;
+          transition: 0.7s;
+          -moz-transition: 0.7s;
+        }
+
+      }
+    }
+    #main-ul{
+      @include zero;
+      height: $nav;
+      @include dirrow;
+      list-style-type: none;
+      position: absolute;
+      right: 6rem;
+      #link1{
+        background: linear-gradient(right,rgba(230, 92, 0, 1),rgba(249, 212, 35, 1));
+        background: -moz-linear-gradient(right,rgba(230, 92, 0, 1),rgba(249, 212, 35, 1));
+      }
+      #link2{
+        background: linear-gradient(right,#da22ff,#9733ee);
+        background: -moz-linear-gradient(right,#da22ff,#9733ee);
+      }
+      #link3{
+        background: linear-gradient(right,#1cd8d2,#93edc7);
+        background: -moz-linear-gradient(right,#1cd8d2,#93edc7);
+      }
+      #link4{
+        background: linear-gradient(right,#ff512f,#dd2476);
+        background: -moz-linear-gradient(right,#ff512f,#dd2476);
+      }
+      #link5{
+        background: linear-gradient(right,#1d976c,#93f9b9);
+        background: -moz-linear-gradient(right,#1d976c,#93f9b9);
+      }
+      li{
+        @include zero;
+        height: $nav;
+        transition: all 0.7s linear;
+        position: relative;
+        z-index: 10;
+
+        a{
+          @include clearA;
+          margin: 0;
+          padding: 0 3rem 0 3rem;
+          height: $nav;
+          display: flex;
+          width: 100%;
+          box-sizing: border-box;
+          transition: 0.7s;
+          background-color: rgba(22, 22, 22, 1);
+          position: relative;
+          z-index: 20;
+          p{
+            padding: 0;
+            margin: auto;
+            font-family: $nuni;
+            font-weight: 200;
+            text-transform: uppercase;
+            font-size: 1.6rem;
+          }
+          &:hover{
+            background-color: rgba(18, 18, 18, 0);
+            p{
+              color: #fff;
+            }
+          }
+        }
+        &:hover{
+
+        }
+      }
+    }
+  }
+}
+#sec2-about{
+  width: 100%;
+  background-color: #fff;
+  min-height: 20rem;
 }
 #sec3{
-  width: 100%
+  width: 100%;
 }
