--- a/css/partials/_layout.scss
+++ b/css/partials/_layout.scss
@@ -10,12 +10,12 @@ body{
   position: relative;
   background-image: url('../images/whitetiger1.png');
   background-size: cover;
-  background-position: top right;
   nav{
     width: 100%;
     height: $nav;
     background-color: rgba(22, 22, 22, 1);
     position: fixed;
+    z-index: 500;
     #nav-logo{
       @include zero;
       height: $nav;
@@ -113,6 +113,93 @@ body{
 
         }
       }
+    }
+  }
+  .title-cont{
+    width: 100%;
+    height: 100%;
+    @include dirrow;
+    .title-box{
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: flex-start;
+      margin-left: 9rem;
+      margin-top: 3rem;
+      height: 50rem;
+      position: relative;
+      .main-title{
+        font-family: $hind;
+        font-size: 8.4rem;
+        font-weight: 300;
+        text-align: left;
+        position: relative;
+      }
+      .mini-box{
+        position: absolute;
+        bottom: 0;
+        .sub-title{
+          font-family: $nuni;
+          margin: 2rem 0 4rem 0.4rem;;
+          font-size: 2rem;
+          font-weight: 300;
+          width: 50rem;
+          line-height: 2.8rem;
+        }
+        .title-link{
+          height: 6rem;
+          width: 30rem;
+          margin: 0 0 2.4rem 0.6rem;
+          a{
+            @include dirrow;
+            @include clearA;
+            width: 100%;
+            height: 100%;
+            position: relative;
+            z-index: 50;
+            .fa-tag{
+              font-size: 3.8rem;
+              color: #f9d423;
+              position: relative;
+              z-index: 50;
+            }
+            .tickets{
+              position: relative;
+              z-index: 50;
+              font-family: $nuni;
+              text-transform: uppercase;
+              font-size: 2.2rem;
+              letter-spacing: 0.3rem;
+              margin-left: 1rem;
+            }
+            .hover-ticket{
+              position: absolute;
+              z-index: 0;
+              height: 6rem;
+              width: 40rem;
+              left: -50rem;
+              top: 0;
+              transition: 0.7s;
+              border-radius: 0.5rem;
+            }
+            .hover1{
+              background: linear-gradient(right,#1cd8d2,#93edc7);
+              background: -moz-linear-gradient(right,#1cd8d2,#93edc7);
+            }
+            .hover2{
+              background: linear-gradient(right,#ff512f,#dd2476);
+              background: -moz-linear-gradient(right,#ff512f,#dd2476);
+            }
+            &:hover{
+              .hover-ticket{
+                left: -10rem;
+              }
+            }
+          }
+
+        }
+      }
+
     }
   }
 }
