--- a/css/partials/_layout.scss
+++ b/css/partials/_layout.scss
@@ -4,6 +4,36 @@ html{
 body{
   color: #fff;
 }
+.link1{
+  background: linear-gradient(right,rgba(230, 92, 0, 1),rgba(249, 212, 35, 1));
+  background: -moz-linear-gradient(right,rgba(230, 92, 0, 1),rgba(249, 212, 35, 1));
+  background: -webkit-linear-gradient(right,rgba(230, 92, 0, 1),rgba(249, 212, 35, 1));
+}
+.link2{
+  background: linear-gradient(right,#da22ff,#9733ee);
+  background: -moz-linear-gradient(right,#da22ff,#9733ee);
+  background: -webkit-linear-gradient(right,#da22ff,#9733ee);
+}
+.link3{
+  background: linear-gradient(right,#1cd8d2,#93edc7);
+  background: -moz-linear-gradient(right,#1cd8d2,#93edc7);
+  background: -webkit-linear-gradient(right,#1cd8d2,#93edc7);
+}
+.link4{
+  background: linear-gradient(right,#ff512f,#dd2476);
+  background: -moz-linear-gradient(right,#ff512f,#dd2476);
+  background: -webkit-linear-gradient(right,#ff512f,#dd2476);
+}
+.link5{
+  background: linear-gradient(right,#1d976c,#93f9b9);
+  background: -moz-linear-gradient(right,#1d976c,#93f9b9);
+  background: -webkit-linear-gradient(right,#1d976c,#93f9b9);
+}
+.link6{
+  background: linear-gradient(right,#ff4e50,#f9d423);
+  background: -moz-linear-gradient(right,#ff4e50,#f9d423);
+  background: -webkit-linear-gradient(right,#ff4e50,#f9d423);
+}
 #sec1-main-cont{
   width: 100%;
   background-color: #000;
@@ -55,26 +85,6 @@ body{
       list-style-type: none;
       position: absolute;
       right: 6rem;
-      #link1{
-        background: linear-gradient(right,rgba(230, 92, 0, 1),rgba(249, 212, 35, 1));
-        background: -moz-linear-gradient(right,rgba(230, 92, 0, 1),rgba(249, 212, 35, 1));
-      }
-      #link2{
-        background: linear-gradient(right,#da22ff,#9733ee);
-        background: -moz-linear-gradient(right,#da22ff,#9733ee);
-      }
-      #link3{
-        background: linear-gradient(right,#1cd8d2,#93edc7);
-        background: -moz-linear-gradient(right,#1cd8d2,#93edc7);
-      }
-      #link4{
-        background: linear-gradient(right,#ff512f,#dd2476);
-        background: -moz-linear-gradient(right,#ff512f,#dd2476);
-      }
-      #link5{
-        background: linear-gradient(right,#1d976c,#93f9b9);
-        background: -moz-linear-gradient(right,#1d976c,#93f9b9);
-      }
       li{
         @include zero;
         height: $nav;
@@ -126,7 +136,6 @@ body{
       justify-content: flex-start;
       margin-left: 9rem;
       margin-top: 3rem;
-      height: 50rem;
       position: relative;
       .main-title{
         font-family: $hind;
@@ -136,11 +145,9 @@ body{
         position: relative;
       }
       .mini-box{
-        position: absolute;
-        bottom: 0;
         .sub-title{
           font-family: $nuni;
-          margin: 2rem 0 4rem 0.4rem;;
+          margin: 4rem 0 4rem 0.4rem;;
           font-size: 2rem;
           font-weight: 300;
           width: 50rem;
@@ -185,10 +192,12 @@ body{
             .hover1{
               background: linear-gradient(right,#1cd8d2,#93edc7);
               background: -moz-linear-gradient(right,#1cd8d2,#93edc7);
+              background: -webkit-linear-gradient(right,#1cd8d2,#93edc7);
             }
             .hover2{
               background: linear-gradient(right,#ff512f,#dd2476);
               background: -moz-linear-gradient(right,#ff512f,#dd2476);
+              background: -webkit-linear-gradient(right,#ff512f,#dd2476);
             }
             &:hover{
               .hover-ticket{
@@ -205,9 +214,103 @@ body{
 }
 #sec2-about{
   width: 100%;
-  background-color: #fff;
+  background-color: rgba(22, 22, 22, 1);
   min-height: 20rem;
+  @include dircol;
+  #header-title{
+    font-family: $nuni;
+    text-transform: uppercase;
+    font-size: 4.2rem;
+    margin: 7rem 0;
+    padding: 1rem 0;
+    border-top: 0.1rem solid #9d8200;
+    border-bottom: 0.1rem solid #9d8200;
+    letter-spacing: 1rem;
+    transition: 0.4s;
+  }
+  #header-title.bigborder{
+    padding: 1.3rem 0;
+    border-top: 0.1rem solid #f9d423 !important;
+    border-bottom: 0.1rem solid #f9d423;
+    margin: 6.7rem 0;
+  }
+  .header-desc{
+    font-family: $hind;
+    width: 100rem;
+    margin-bottom: 7rem;
+    font-size: 2rem;
+    font-weight: 300;
+    text-align: center;
+    color: #696969;
+  }
+  .category-box{
+    @include dirrow;
+      margin-bottom: 7rem;
+    .category-item{
+      box-sizing: border-box;
+      border: 1px solid #2e2e2e;
+      width: 30rem;
+      min-height: 20rem;
+      margin: 0 2rem;
+      transition: 0.4s;
+      @include dircol;
+      &:hover{
+        border: 1px solid #696969;
+        -webkit-box-shadow: 0px 10px 13px -7px rgba(0,0,0,0.75);
+        -moz-box-shadow: 0px 10px 13px -7px rgba(0,0,0,0.75);
+        box-shadow: 0px 10px 13px -7px rgba(0,0,0,0.75);
+        cursor: pointer;
+      }
+      .cat-icon{
+        color: #f9d423;
+        font-size: 5.2rem;
+        margin: 1.6rem 0;
+      }
+      .cat-title{
+        color: #f9d423;
+        text-transform: uppercase;
+        font-family: $nuni;
+        font-size: 2.4rem;
+      }
+      .cat-desc{
+        font-family: $hind;
+        color: #696969;
+        font-size: 1.6rem;
+        margin: 1.2rem 2rem;
+        text-align: center;
+      }
+      .cat-button{
+        width: 14rem;
+        height: 4rem;
+        box-sizing: border-box;
+        margin-bottom: 1.8rem;
+      }
+      .cat-button > a{
+        @include clearA;
+        width: 14rem;
+        height: 4rem;
+        display: flex;
+        border: 1px solid #2e2e2e;
+        background-color: rgba(22, 22, 22, 1);
+        box-sizing: border-box;
+        transition: 0.7s;
+        &:hover{
+          background-color: rgba(22, 22, 22, 0);
+        }
+      }
+      .cat-button > a > p{
+        margin: auto;
+        padding: 0;
+        text-transform: uppercase;
+        font-family: $nuni;
+        font-size: 1.8rem;
+        letter-spacing: 0.4rem;
+      }
+    }
+
+  }
 }
+
 #sec3{
   width: 100%;
 }
