--- a/css/main.css
+++ b/css/main.css
@@ -250,6 +250,15 @@ nav#main-nav ul#main-ul li a.nav-darken:hover {
           #sec1-main-cont .title-cont .title-box .mini-box .title-link a:hover .hover-ticket {
             left: -10rem; }
 
+.header-desc {
+  font-family: "Hind", sans-serif;
+  width: 100rem;
+  margin-bottom: 7rem;
+  font-size: 2rem;
+  font-weight: 300;
+  text-align: center;
+  color: #696969; }
+
 #sec2-about {
   width: 100%;
   background-color: #161616;
@@ -272,14 +281,6 @@ nav#main-nav ul#main-ul li a.nav-darken:hover {
     border-top: 0.1rem solid #f9d423 !important;
     border-bottom: 0.1rem solid #f9d423;
     margin: 6.7rem 0; }
-  #sec2-about .header-desc {
-    font-family: "Hind", sans-serif;
-    width: 100rem;
-    margin-bottom: 7rem;
-    font-size: 2rem;
-    font-weight: 300;
-    text-align: center;
-    color: #696969; }
   #sec2-about .category-box {
     display: flex;
     align-items: center;
@@ -344,14 +345,203 @@ nav#main-nav ul#main-ul li a.nav-darken:hover {
 
 #sec3-description {
   width: 100%;
-  min-height: 74rem;
+  min-height: 76rem;
   background-color: #000;
   background-image: url("../images/warsaw-bg3.png");
-  background-size: cover; }
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: center; }
+  #sec3-description .frames-box {
+    position: relative;
+    width: 140rem;
+    height: 54rem; }
+    #sec3-description .frames-box .left-frame {
+      position: absolute;
+      left: 0;
+      overflow: hidden;
+      top: 4rem;
+      box-sizing: border-box;
+      height: 46rem;
+      width: 92rem;
+      border: 0.1rem solid #bbbbbb; }
+      #sec3-description .frames-box .left-frame .inner-left-frame {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: row; }
+        #sec3-description .frames-box .left-frame .inner-left-frame #slide-right-arrow {
+          position: relative;
+          margin-left: 1.5rem;
+          transition: 0.2s;
+          display: none; }
+          #sec3-description .frames-box .left-frame .inner-left-frame #slide-right-arrow .fa-angle-right {
+            font-size: 6rem;
+            display: block;
+            animation: arrowpulse 3s infinite;
+            -webkit-animation: arrowpulse 3s infinite;
+            -moz-animation: arrowpulse 3s infinite; }
+          #sec3-description .frames-box .left-frame .inner-left-frame #slide-right-arrow:hover .fa-angle-right {
+            cursor: pointer;
+            color: #f9d423 !important; }
+        #sec3-description .frames-box .left-frame .inner-left-frame .left-frame-content {
+          position: absolute;
+          left: 5rem;
+          height: 46rem;
+          overflow: hidden;
+          width: 81rem;
+          transition: 1s; }
+          #sec3-description .frames-box .left-frame .inner-left-frame .left-frame-content .lfc-case {
+            height: 46rem;
+            overflow: hidden;
+            width: 81rem;
+            display: flex;
+            align-items: center;
+            flex-direction: column; }
+            #sec3-description .frames-box .left-frame .inner-left-frame .left-frame-content .lfc-case p.lfc-title {
+              font-family: "Nunito", sans-serif;
+              text-transform: uppercase;
+              font-size: 4.2rem;
+              margin: 7rem 0;
+              padding: 1rem 0;
+              border-top: 0.1rem solid #9d8200;
+              border-bottom: 0.1rem solid #9d8200;
+              letter-spacing: 1rem;
+              transition: 0.4s; }
+            #sec3-description .frames-box .left-frame .inner-left-frame .left-frame-content .lfc-case p.lfc-desc {
+              font-family: "Hind", sans-serif;
+              color: #cccccc;
+              font-size: 2.2rem;
+              margin: 1.2rem 2rem;
+              text-align: center;
+              font-weight: 200; }
+    #sec3-description .frames-box .right-frame {
+      position: absolute;
+      box-sizing: border-box;
+      right: 0;
+      width: 54rem;
+      height: 54rem;
+      border: 0.7rem solid #f9d423;
+      transition: 1s; }
+      #sec3-description .frames-box .right-frame .inner-right-frame {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+        flex-direction: row; }
+        #sec3-description .frames-box .right-frame .inner-right-frame #slide-left-arrow {
+          position: relative;
+          margin-left: 1.2rem;
+          transition: 0.2s; }
+          #sec3-description .frames-box .right-frame .inner-right-frame #slide-left-arrow .fa-angle-left {
+            font-size: 6rem;
+            display: block;
+            animation: arrowpulse 3s infinite;
+            -webkit-animation: arrowpulse 3s infinite;
+            -moz-animation: arrowpulse 3s infinite; }
+          #sec3-description .frames-box .right-frame .inner-right-frame #slide-left-arrow:hover .fa-angle-left {
+            cursor: pointer;
+            color: #f9d423 !important; }
+        #sec3-description .frames-box .right-frame .inner-right-frame .hidden-frame {
+          position: absolute;
+          box-sizing: border-box;
+          right: 47.2rem;
+          height: 46rem;
+          width: 92rem;
+          padding: 0 5rem; }
+          #sec3-description .frames-box .right-frame .inner-right-frame .hidden-frame .hf-desc {
+            font-family: "Hind", sans-serif;
+            color: #cccccc;
+            font-size: 2.2rem;
+            margin: 5rem 0 0 5rem;
+            text-align: left;
+            font-weight: 200; }
+        #sec3-description .frames-box .right-frame .inner-right-frame .right-frame-content {
+          position: absolute;
+          height: 100%;
+          width: 42.4rem;
+          right: 5rem;
+          display: flex;
+          flex-direction: column; }
+          #sec3-description .frames-box .right-frame .inner-right-frame .right-frame-content .rfc-title {
+            font-family: "Nunito", sans-serif;
+            font-size: 2.2rem;
+            text-transform: uppercase;
+            letter-spacing: 0.8rem;
+            margin: 3rem 0 0 3rem; }
+          #sec3-description .frames-box .right-frame .inner-right-frame .right-frame-content .rfc-desc {
+            font-family: "Hind", sans-serif;
+            color: #696969;
+            font-size: 1.6rem;
+            margin: 2rem 0 0 3rem; }
+          #sec3-description .frames-box .right-frame .inner-right-frame .right-frame-content .rfc-item {
+            display: flex;
+            flex-direction: row;
+            align-items: flex-start;
+            margin: 2rem 0 0 3rem; }
+            #sec3-description .frames-box .right-frame .inner-right-frame .right-frame-content .rfc-item .rfc-icon {
+              color: #f9d423;
+              font-size: 3.8rem;
+              display: block; }
+            #sec3-description .frames-box .right-frame .inner-right-frame .right-frame-content .rfc-item .rfc-icon-desc {
+              display: flex;
+              align-items: center;
+              flex-direction: column; }
+              #sec3-description .frames-box .right-frame .inner-right-frame .right-frame-content .rfc-item .rfc-icon-desc .rid-title {
+                color: #f9d423;
+                font-family: "Nunito", sans-serif;
+                font-size: 2.4rem;
+                margin: 0 0 0 0; }
+              #sec3-description .frames-box .right-frame .inner-right-frame .right-frame-content .rfc-item .rfc-icon-desc .rid-desc {
+                font-family: "Hind", sans-serif;
+                color: #696969;
+                font-size: 1.6rem;
+                margin: 1rem 0 0 3rem; }
 
+@keyframes arrowpulse {
+  0% {
+    color: white; }
+  75% {
+    color: white; }
+  87% {
+    color: rgba(255, 255, 255, 0); }
+  100% {
+    color: white; } }
 #sec4-team {
   width: 100%;
   min-height: 50rem;
-  background-color: #161616; }
+  background-color: #161616;
+  display: flex;
+  align-items: center;
+  flex-direction: column; }
+  #sec4-team .team-title {
+    font-family: "Nunito", sans-serif;
+    text-transform: uppercase;
+    font-size: 4.2rem;
+    margin: 7rem 0;
+    padding: 1rem 0;
+    border-top: 0.1rem solid #9d8200;
+    border-bottom: 0.1rem solid #9d8200;
+    letter-spacing: 1rem;
+    transition: 0.4s; }
+  #sec4-team .person-box {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    margin-bottom: 7rem; }
+    #sec4-team .person-box .person-item {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      width: 30rem;
+      min-height: 20rem;
+      margin: 0 2rem;
+      transition: 0.4s;
+      background-color: green; }
 
 /*# sourceMappingURL=main.css.map */
