--- a/css/partials/_mixins.scss
+++ b/css/partials/_mixins.scss
@@ -37,3 +37,14 @@
   width: inherit;
   height: inherit;
 }
+@mixin pulseHeader {
+	font-family: $nuni;
+	text-transform: uppercase;
+	font-size: 4.2rem;
+	margin: 7rem 0;
+	padding: 1rem 0;
+	border-top: 0.1rem solid #9d8200;
+	border-bottom: 0.1rem solid #9d8200;
+	letter-spacing: 1rem;
+	transition: 0.4s;
+}
