--- a/css/partials/_layout.scss
+++ b/css/partials/_layout.scss
@@ -334,7 +334,7 @@ nav#main-nav ul#main-ul li a.nav-darken:hover{
       box-sizing: border-box;
       height: 46rem;
       width: 92rem;
-      border: 0.1rem solid #bbbbbb;
+      border: 0.1rem solid #666666;
       .inner-left-frame{
         position: relative;
         width: 100%;
@@ -392,7 +392,7 @@ nav#main-nav ul#main-ul li a.nav-darken:hover{
       right: 0;
       width: 54rem;
       height: 54rem;
-      border: 0.7rem solid $yellow;
+      border: 0.5rem solid $yellow;
       transition: 1s;
       .inner-right-frame{
         position: relative;
